<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Memory Game</string>
    <string name="play">Play</string>
    <string name="records">History</string>

    <string-array name="type">
        <item>New Game</item>
        <item>4 X 4</item>
        <item>4 X 5</item>
        <item>4 X 6</item>
        <item>5 X 6</item>
        <item>6 X 6</item>
        <item>5 X 5</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titlePlay">Title of Play</string>
    <string name="Tries">Tries</string>
    <string name="timePlay">Time</string>
    <string name="typePlay">Type</string>

</resources>
