<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/GameName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAlignment="center"
        android:text="@string/app_name"
        android:textColor="@color/dark_grey"
        android:layout_marginTop="100dp"/>


    <ImageView
        android:id="@+id/GameImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GameName"
        android:background="@drawable/card1"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/Play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GameImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/play" />

    <Button
        android:id="@+id/Records"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/records"
        android:layout_below="@+id/Play"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"/>



</RelativeLayout>
